changes in achievement

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
         <!-- achievement section -->
         <div class="achieve">
-            <div class="h1">My Achievements</div>
+            <h2>My Achievements</h2>
             <div class="achievecard">
             <div class="achcard"><img src="My Portfolio- Images/tinywow_sql_basic certificate (1)_65619058_1.jpg" alt=""></div>
             <div class="achcard"><img src="My Portfolio- Images/tinywow_sql_intermediate certificate_65619113_1.jpg" alt=""></div>
