add resume on cv button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="bt">
                 <button class="conme">CONTACT ME</button>
-                <button class="resume">DOWNLOAD MY RESUME</button>
+                <button class="resume"><a href="/AZEEM CV (FED).pdf" target="_blank">MY RESUME</a></button>
             </div>
         </div>
         <div class="vector1"><img src="My Portfolio- Images/vecteezy_3d-male-character-presenting-to-the-right_24785849.png" alt=""></div>
