--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="main">
         <!-- navbar -->
       <div class="navbar"> 
-        <div class="sign"><span class="arrow"> < </span>Azeem Ur Rehman <span class="arrow">/></span></div>
+        <div class="sign"><span class="arrow">  </span>Azeem Ur Rehman <span class="arrow">/></span></div>
         <div class="navlinks">
             <a href="">Skills</a>
             <a href="">Work Experiences</a>
