--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="main">
         <!-- navbar -->
       <div class="navbar"> 
-        <div class="sign"><span class="arrow">  </span>Azeem Ur Rehman <span class="arrow">/></span></div>
+        <div class="sign"><span class="arrow"> < </span>Azeem Ur Rehman <span class="arrow">/></span></div>
         <div class="navlinks">
             <a href="">Skills</a>
             <a href="">Work Experiences</a>
@@ -30,7 +30,7 @@
       <div class="content">
         <div class="bio">
             <h1>Hi all, I'm  Azeem &#9995</h1>
-            <p>a passionate frontend developer with a degree in <span class="yellow">Biotechnology  (because I thought coding websites would be easier than engineering cells — turns out, both are tricky!)</span>. I specialize in creating responsive, user-friendly websites using<span class="yellow"> HTML, CSS, </span>and <span class="yellow">JavaScript</span>. Always learning and ready for the next challenge! 🚀 having an experience of building <span class="yellow">Web </span>and <span class="yellow">Mobile</span> applications with<span class="yellow"> JavaScript / Reactjs / MySQL</span> and some other cool libraries and frameworks.</p>
+            <p>A passionate frontend developer with a degree in <span class="yellow">Biotechnology  (because I thought coding websites would be easier than engineering cells — turns out, both are tricky!)</span>. I specialize in creating responsive, user-friendly websites using<span class="yellow"> HTML, CSS, </span>and <span class="yellow">JavaScript</span>. Always learning and ready for the next challenge! 🚀 having an experience of building <span class="yellow">Web </span>and <span class="yellow">Mobile</span> applications with<span class="yellow"> JavaScript / Reactjs / MySQL</span> and some other cool libraries and frameworks.</p>
             <div class="icons">
                 <a href="https://www.linkedin.com/in/azeem-ur-rehman-4bb3b7325" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href=""><i class="fa-brands fa-facebook"></i></a>
